--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/DevinsDad/vscode-nextjs-demo#readme",
   "dependencies": {
+    "check-node-version": "^4.0.3",
     "next": "^9.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
